# clipable

./: .gitignore  Cargo.toml  README.md  dev_install.bat  run_once.bat.CHANGEME
src/: main.rs  service.rs
wix/: main.wxs
