[package]
name = "clipable"
version = "1.1.0"
authors = ["rudes"]
edition = "2018"
description = "A small windows service that monitors a given folder and uploads any new .mp4 files to your streamable account"
readme = "README.md"
repository = "https://github.com/rudes/clipable"
keywords = ["clipable", "streamable", "upload", "clips"]
categories = ["os::windows-apis"]

[dependencies]
log = "0.4"
winlog = "0.2.4"
winreg = "0.6.0"
notify = "4.0.7"
reqwest = "0.9.9"
serde_json = "1.0.37"
windows-service = "0.1.0"
serde = { version = "1.0.85", features = ["derive"] }